fix playback speed z-index issue

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index:  10000000;
+    z-index:  1000;
 }
 
 a {
