--- a/app/assets/stylesheets/video_show.scss
+++ b/app/assets/stylesheets/video_show.scss
@@ -74,7 +74,8 @@
 }
 
 .video-video-container {
-  position: relative
+  position: relative;
+  z-index: 10;
 }
 
 
